# Engine-cpp

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyboardEvent.h
src/Game/: Game.cpp  Game.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h
src/shaders/: color.frag  default.vert
